<?xml version="1.0" encoding="utf-8"?>
<!-- 
    This file is part of UNIwifi.
  
    UNIwifi is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
  
    UNIwifi is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
  
    You should have received a copy of the GNU General Public License
    along with UNIwifi.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>
    <string name="app_name">UNIwifi</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="network">Network</string>
	<string name="done">Create/Update</string>
	<string name="help">Help</string>
	<string name="warning_blank">Username/password is blank.</string>
	<string name="about">About</string>
	<string name="feedback">Feedback</string>
	<string name="warning_no_network">There is no network to connect required page.</string>
	<string name="userinfo_header">Username and Password</string>
	<string name="userinfo">Username and password given by IT or Student Affairs Deparmant.</string>
	<string name="networkinfo_header">Network</string>
	<string name="networkinfo">Network should be chosen according to university name. Some universities can be have more than one network such as one for students, one for personnels</string>
	<string name="issues_header">Issues</string>
	<string name="issuesinfo">This tools does not work on some specific devices. If you have one of them, please contact us.</string>
	<string name="successfuly_added">New network was added successfuly.</string>
	<string name="successfuly_saved">Network configuration was saved successfuly.</string>
	<string name="warning_not_enabled_wireless">Wireless network is not enabled</string>
	<string name="enable">Enable Wireless</string>
	<string name="close">Close UNIwifi</string>
	<string name="Okay">OK</string>
	<string name="about_msg">UNIwifi v 3.0\n\nLicensed under the GPL v 3.0\nProject page and source at \nhttps://github.com/brnogz/uniwifi\nGNU GPL v 3.0\nhttp://www.gnu.org/licenses/gpl-3.0.txt\n\nUses code from Wifi-ACE Project\nhttp://android-wifi-ace.googlecode.com\Apache License v 2.0\nhttp://www.apache.org/licenses/LICENSE-2.0.html\n</string>
	<string name="img_logo">UNIwifi Logo</string>
	<string name="enterprise_msg">Current UNIwifi cannot reach some settings on your device, so UNIwifi cannot work well. Please give feedback about this error.</string>
	<string name="email">Your Email Address</string>
	<string name="title">Title</string>
	<string name="message">Message</string>
	<string name="send">Send</string>
	<string name="feedbackhelp">or you can send email to brn.oguz@gmail.com</string>
    <string name="send_sucess">Message is sent successfuly</string>
    <string name="send_fail">Your message cannot be posted or you tried to flood the server.\nPlease try to post later</string>
</resources>